--- a/home.html
+++ b/home.html
@@ -15,17 +15,17 @@
 <body>
     <div class="container">
         <div class="colors box">
-            <img src="Images/colors/Colors2.png" alt="Color box" />
+            <a href="colors.html"><img src="Images/colors/Colors2.png" alt="Color box" /></a>
             <p>Colors</p>
         </div>
 
         <div class="abc box">
-            <img src="Images/ABC/aeiou.png" alt="ABC box" />
+            <a href="abc.html"><img src="Images/ABC/aeiou.png" alt="ABC box" /></a>
             <p>ABC</p>
         </div>
 
         <div class="numbers box">
-            <img src="Images/numbers/numbers.png" alt="Number box" />
+            <a href="numbers.html"><img src="Images/numbers/numbers.png" alt="Number box" /></a>
             <P>Numbers</P>
         </div>
     </div>
