--- a/colors.html
+++ b/colors.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>JS Quiz App</title>
+	<title>Color Quiz</title>
 	<link rel="stylesheet" href="style.css">
 	
   <meta charset="utf-8">
@@ -16,12 +16,14 @@
   <button type='button' onclick='location.reload()'>Reload</button>
 	<div class="container">
 		<div id="quiz">
-			<h1>Quiz</h1>
+			<h1>Colors</h1>
 			
-			<hr style="margin-bottom: 20px">
+			<hr style="margin-bottom: 5px">
 
 			<p id="question"></p>
-			
+			<div>
+			    <img id="imagen" src="Images/colors/yellow.png" />
+            </div>
 			<div class="button-grp">
 				<button id="btn0"><span id="choice0"></span></button>
 				<button id="btn1"><span id="choice1"></span></button>
